@@ -28,6 +28,11 @@ case "$cmd" in
 	;;
     off|disable|0)
 	if [ "$STATE" = 1 ]; then
+            # rt2860 needs to be idle when shut down
+            if lsmod | grep -q rt2860sta; then
+                ifconfig wlan0 down || ifconfig ra0 down
+                modprobe -r rt2860sta
+            fi
 	    echo 0 > $wlan_control
 	fi
 	;;
