@@ -3,6 +3,8 @@ eeepc-acpi-scripts (1.1.7) UNRELEASED; urgency=low
   [ Damyan Ivanov ]
   * add a hook in /etc/pm/sleep.d that switches off wlan on suspend on models
     using RT2860
+  * wireless.sh: deconfigure wlan0 and remove the rt2860sta module before
+    switching off the hardware
 
   [ Darren Salt ]
   * rfkill-input isn't present in kernel ≥ 2.6.31, so don't try loading it.
